--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-#This change is done by Shivakumar
+<!--This change is done by Shivakumar-->
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   Licensed to the Apache Software Foundation (ASF) under one
